...
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />



    <ImageButton
        android:id="@+id/backButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="48dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@android:color/background_light"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
...
            android:layout_weight="1"
            android:background="@color/colorTabs"
            android:text="News Feed"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />

        <Button
            android:id="@+id/followingButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTabs"
            android:text="Following"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />

        <Button
            android:id="@+id/profileButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTabs"
            android:text="Profile"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
    </LinearLayout>

    <TextView
        android:id="@+id/profileName"
        android:text="test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_toStartOf="@+id/button4"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profilePostList"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profilePictureView">

    </android.support.v7.widget.RecyclerView>

    <ImageButton
        android:id="@+id/search"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="48dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:scaleType="centerInside"
        android:tint="@android:color/background_light"
        app:srcCompat="@android:drawable/ic_search_category_default" />

    <ImageButton
        android:id="@+id/addPost"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="48dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/search"
        android:background="@color/colorPrimary"
...
