...
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Groups/Solo"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignTop="@+id/textView"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/textView" />
...
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignEnd="@+id/spinner2"
            android:layout_alignTop="@+id/textView2"
            android:layout_toRightOf="@+id/textView2" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/whereText"
            android:layout_alignEnd="@+id/spinner2"
            android:layout_alignTop="@+id/whereText"
            android:layout_toRightOf="@+id/whereText" />

        <EditText
            android:id="@+id/findUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/searchButton"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="Find user"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <EditText
            android:id="@+id/findText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="24dp"
            android:ems="10"
...
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="90dp"
            android:layout_height="53dp"
            android:layout_marginTop="19dp"
            android:hint="Search"
            android:text="Search"
            android:layout_below="@+id/recentBox"
            android:layout_alignStart="@+id/recentBox" />

        <ImageButton
            android:id="@+id/backButton"
            style="@android:style/Widget.Holo.Light.ImageButton"
            android:layout_width="48dp"
...
            android:background="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:tint="@android:color/background_light"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <Button
            android:id="@+id/searchUsers"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
...
