...


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/body"
        android:layout_centerHorizontal="true"
        android:text="Post"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
...
        android:layout_below="@+id/ashamed_image"
        android:layout_alignParentStart="true"
        android:src="@drawable/suprised"
        android:layout_alignBottom="@+id/surprised"/>

    <EditText
        android:id="@+id/trigger"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_below="@+id/moodRadioGroup"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_light"
        android:hint="Trigger"/>
...
        android:textSize="20sp"
        android:layout_below="@+id/group"
        android:layout_toEndOf="@+id/crowd_image"
        android:text="With a Crowd"/>

    <Button
        android:id="@+id/postButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="Post"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
...

        <RadioButton
            android:id="@+id/alone_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <RadioButton
            android:id="@+id/group_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <RadioButton
            android:id="@+id/crowd_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />
...
        <RadioButton
            android:id="@+id/scared_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/happy_selected"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <RadioButton
            android:id="@+id/sad_selected"
            android:layout_width="25dp"
...
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@android:color/background_light"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/pin_unselected"
        android:background="@null"
        android:layout_toLeftOf="@+id/datebutton"
        android:layout_below="@+id/body"
...
